<resources>
    <string name="app_name">MyMusicPlayer</string>
    <string name="Play">Play</string>
    <string name="Stop">Stop</string>
    <string name="ShowList">Artists and Songs</string>
    <string name="Pause">Pause</string>
    <string name="MediaList">MediaList</string>
    <string name="SkipForward">SkipF</string>
    <string name="SkipBackward">SkipB</string>
    <string name="albumArt">albumArt</string>
    <string name="PlayPause">Play/Pause</string>
</resources>
