<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:baselineAligned="false"
    >

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PlayPause"
        android:id="@+id/pause"
        android:layout_gravity="bottom"
        android:onClick="onClickPause"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/skipb"
        android:layout_toEndOf="@+id/skipb"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SkipForward"
        android:id="@+id/skipf"
        android:layout_gravity="bottom"
        android:onClick="onClickSkipForward"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="391dp"
        android:layout_height="429dp"
        android:id="@+id/list"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#c8bdbd"
        android:drawSelectorOnTop="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SkipBackward"
        android:id="@+id/skipb"
        android:layout_gravity="bottom"
        android:onClick="onClickSkipBackward"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/pause" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Stop"
        android:id="@+id/stop"
        android:layout_gravity="bottom"
        android:onClick="onClickStop"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/skipf"
        android:layout_toStartOf="@+id/skipf"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp" />

</RelativeLayout>
